utilities/objects/API_Exception_Log__c/API_Exception_Log__c.object-meta.xml
<CustomObject>
    <description>Durable sink for outbound-integration failures. Logger.logApiException persists one row per failure (system-mode insert) carrying an allowlist-scrubbed diagnostic summary — status code, endpoint host+path, correlation id, exception type — never raw request or response bodies. LogCleanupBatch purges rows past the Log_Clean_Up__mdt retention window unless Do_Not_Delete__c is checked.</description>
    <label>API Exception Log</label>
    <nameField>
        <displayFormat>AEL-{00000000}</displayFormat>
        <label>API Exception Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Exception Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>