utilities/objects/API_Exception_Log__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Logical API / integration name the failure belongs to (e.g. Jira, Slack, Workday), as reported by the caller.</description>
</CustomField>