utilities/objects/API_Exception_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Text</type>
    <length>255</length>
    <description>Type name of the thrown exception (e.g. System.CalloutException). Null when the failure was reported through the non-exception overload.</description>
</CustomField>