utilities/objects/API_Exception_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Allowlist-scrubbed diagnostic summary: status codes, endpoint host+path (query strings stripped), correlation ids, and exception detail survive; everything else is redacted before persist. Never carries raw request/response bodies. Logger truncates anything longer than the field.</description>
</CustomField>