utilities/objects/API_Exception_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Text</type>
    <length>255</length>
    <description>Specific method or integration step that failed, as reported by the caller.</description>
</CustomField>