utilities/objects/API_Exception_Log__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <type>Text</type>
    <length>255</length>
    <description>SObject API name the failure was about, when the caller supplied one.</description>
</CustomField>