utilities/objects/API_Exception_Log__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Record Id the failure was about, when the caller supplied one. Text rather than a lookup so the row survives the source record's deletion and the sink stays SObject-agnostic.</description>
</CustomField>