utilities/objects/API_Exception_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Stack trace of the thrown exception, passed through the same allowlist scrub as Message__c (stack frames are identifier-shaped, so they survive intact). Logger truncates anything longer than the field.</description>
</CustomField>