utilities/objects/API_Exception_Log__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <type>Text</type>
    <length>255</length>
    <description>Correlation id tying this row to the request that produced it — typically System.Request.getCurrent().getRequestId(), or the correlation id surfaced to the caller in a rethrown exception message.</description>
</CustomField>